--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 header{
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: space-around;
     align-items: center;
 
@@ -19,6 +19,7 @@ header img.perfil{
 section.apresentacao{
     display: flex;
     flex-flow: column nowrap;
+    max-width: 500px;
     justify-content: center;
     align-items: center;
     gap: 10px;
