--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,10 @@ main section.detalhes section.experiencias div{
 }
 
 main section.projetos{
-    background-color: var(--cinza);
     width: 100%;
-    height: 300px;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
 }
