--- a/css/main.css
+++ b/css/main.css
@@ -67,9 +67,61 @@ main section.detalhes section.experiencias div{
 
 main section.projetos{
     width: 100%;
+    max-width: 800px;
+    margin: 0px auto;
     display: flex;
     flex-flow: column wrap;
     justify-content: flex-start;
     align-items: center;
     gap: 10px;
+}
+
+main section.projetos section.cards{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: stretch;
+    gap: 10px;
+}
+
+main section.projetos section.cards div.card{
+    flex-basis: calc(50% - 10px); 
+    box-sizing: border-box; 
+    background-color: #ddd;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    border: 2px solid #000000;
+}
+
+main section.projetos section.cards div.card div.buttons{
+    width: 100%;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+}
+
+main section.projetos section.cards div.card div.buttons button{
+    padding: 2px 5px;
+    border-radius: 15px;
+    border: 1.5px solid #000000;
+    background-color: transparent;
+    color: #000000;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+main section.projetos section.cards div.card div.buttons button:hover{
+    transform: scale(1.1);
+    background-color: var(--verde);
+}
+
+main section.projetos section.cards div.card div.buttons a{
+    font-size: 0.9rem;
 }
