--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,16 @@ h3{
     padding: 0px 5px;
 }
 
+h4{
+    font-family: 'Grandiflora One', cursive;
+    text-align: center;
+    font-size: 1.2em;
+    color: #000000;
+    
+    border-bottom: 1.5px solid var(--laranja);
+    padding: 0px 5px;
+}
+
 p{
     font-family: 'Inconsolata', monospace;
     font-size: 1rem;
@@ -58,10 +68,6 @@ ul.social-icons {
     justify-content: center;
 }
 
-ul.social-icons a {
-    text-decoration: none;
-}
-
 ul.social-icons li {
     margin: 0 10px;
     border: 2px solid #000000cc;
@@ -76,6 +82,28 @@ ul.social-icons li:hover {
 ul.social-icons i {
     color: #000000aa; 
     font-size: 1.5rem;; 
+}
+
+a {
+    text-decoration: none;
+    color: #000000;
+}
+
+button{
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+footer{
+    padding: 20px 0px;
+    margin: 0px auto;
+    text-align: center;
+    max-width: 600px;
+}
+footer a{
+    font-weight: bold;
+    text-decoration: underline;
 }
 
 .upper{
