--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ main section.projetos section.cards{
 main section.projetos section.cards div.card{
     flex-basis: calc(50% - 10px); 
     box-sizing: border-box; 
-    background-color: #ddd;
+    background-color: #7f8c8d40;
 
     display: flex;
     flex-flow: column nowrap;
