--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 @import url(left.css);
 @import url(right.css);
+@import url(timeLine.css);
 
 *{
     margin: 0px;
@@ -9,6 +10,7 @@
 
 :root {
     --background: #0e22d1;
+    --transparence10: #ffffff1a;
     --transparence20: #ffffff33;
     --transparence40: #ffffff66;
     --transparence50: #ffffff80;
@@ -19,6 +21,12 @@
     --tertiary: #2A2A2A;
     --quaternary: #39FF14;
     --quinary: #8A2BE2;
+
+    --linkedin: #073f77;
+    --whatsapp: #25d366;
+    --github: #413838;
+    --instagram: #c13584;
+    --email: #d23e33;
 }
 
 body{
@@ -27,7 +35,7 @@ body{
 
 main{
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     justify-content: space-around;
     align-items: flex-start;
     justify-self: center;
@@ -43,11 +51,11 @@ ul{
     margin: 0px auto;
 }
 
-h1{
-    width: fit-content;
-    font-size: 1.5rem;
-    font-weight: bold;
-    text-align: center;
-    margin: 10px auto;
-    border-bottom: var(--secondary) 0.5rem dotted;
+a{
+    text-decoration: none;
+    color: #000000;
+}
+
+a:hover{
+    color: var(--secondary);
 }
