--- a/css/right.css
+++ b/css/right.css
@@ -7,6 +7,7 @@ section.right{
     flex: 0.5 1 700px;
     background-color: var(--transparence20);
     gap: 10px;
+    padding-bottom: 10px;
 }
 
 section.Info-Pessoal{
@@ -19,6 +20,7 @@ section.Info-Pessoal{
 }
 
 section.Info-Pessoal h1{
+    text-align: center;
     font-size: 1.8rem;
     text-decoration: underline;
     text-decoration-color: var(--secondary);
@@ -100,7 +102,8 @@ section.Resumo{
 }
 
 section.Experiencias h1,
-section.Formação h1{
+section.Formação h1,
+section.Resumo h1{
     font-size: 1.5rem;
     text-decoration: underline;
     text-decoration-color: var(--secondary);
@@ -122,4 +125,49 @@ section.Experiencias p,
 section.Formação p{
     text-align: justify;
     padding-right: 10px;
+}
+
+@media screen and (max-width: 800px){
+    div.Info-Pessoal{
+        gap: 15px;
+        margin-bottom: 0px;
+    }
+
+    div.contact a{
+        display: flex;
+        flex-flow: row nowrap;
+        min-width: fit-content;
+        max-width: min-content;
+        gap: 5px;
+        text-align: center; /* Centraliza o texto dentro do link */
+        padding: 5px 10px; /* Adiciona preenchimento para os links */
+    }
+}
+
+@media screen and (max-width: 415px){
+    section.Info-Pessoal h1{
+        text-decoration: none;
+    }
+
+    section.Experiencias h1,
+    section.Formação h1,
+    section.Resumo h1{
+        font-size: 1.2rem;
+    }
+
+    section.Experiencias h2,
+    section.Formação h2{
+        font-size: 1rem;
+    }
+
+    section.Experiencias h3,
+    section.Formação h3{
+        font-size: 0.7rem;
+    }
+
+    section.Experiencias p,
+    section.Formação p,
+    section.Resumo p{
+        font-size: 0.8rem;
+    }
 }
