--- a/css/cards.css
+++ b/css/cards.css
@@ -39,7 +39,7 @@ section.cards div.card{
   max-width: 500px;
   display: flex;
   flex-flow: column nowrap;
-  justify-content: center;
+  justify-content: space-around;
   gap: 10px;
   
   padding: 10px;
