--- a/css/cards.css
+++ b/css/cards.css
@@ -55,6 +55,7 @@ section.cards div.card:hover{
 
 section.cards div.card h2{
   text-align: center;
+  text-wrap: nowrap;
   font-size: 1.4rem;
   text-decoration: underline;
   text-decoration-color: var(--secondary);
