--- a/css/left.css
+++ b/css/left.css
@@ -7,7 +7,7 @@ img{
 section.left{
     display: flex;
     flex-flow: column nowrap;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     max-width: 400px;
     flex-grow: 1;
@@ -72,23 +72,25 @@ ul.certificacoes{
     line-height: 150%;
 }
 
-button{
-    border-radius: 20px;
+button.Curriculo{
+    width: 100%;
     background-color: transparent;
-    border: var(--tertiary) 2px solid;
-    padding: 5px 10px;
+    border: none;
     margin: 5px;
-}
-
-button:hover{
-    background-color: var(--transparence40);
-    box-shadow: 0px 0px 5px 2px var(--transparence80);
 
     a{
-        text-decoration: underline;
-        color: #000000;
-        font-weight: bold;
+        border-radius: 20px;
+        border: var(--tertiary) 2px solid;
+        padding: 5px 10px;
     }
+}
+
+button.Curriculo:hover a{
+    text-decoration: underline;
+    color: #000000;
+    font-weight: bold;
+    background-color: var(--transparence40);
+    box-shadow: 0px 0px 5px 2px var(--transparence80);
 }
 
 @media screen and (max-width: 800px){
